# isagog-ontologies

./: README.md  mema_ontology.properties  mema_ontology.ttl  pyproject.toml
isagog_ontologies/maxxi/v1/: catalog-v001.xml  maxxi_ontology.properties  maxxi_ontology.ttl  maxxi_ontology_model.py
isagog_ontologies/mema/v6/: mema_ontology.properties
isagog_ontologies/mema/v7/: isagog_ontology.properties  mema_ontology.properties  mema_ontology.ttl  mema_ontology_model.py
isagog_ontologies/models/: mema_model.py
isagog_ontologies/ontologies/top/: isagog_ontology.properties  isagog_ontology.ttl
isagog_ontologies/src/maxxi/: catalog-v001.xml
isagog_ontologies/top/: contents.html  index-all.html  index.html  isagog-ontology.ttl  isagog_ontology.properties  isagog_ontology.ttl
isagog_ontologies/top/annotationproperties/: comment___1501100887.html  creator___573147959.html  (+16 more)
isagog_ontologies/utils/: model_generator.py  ontology-to-module.py
maxxi/: catalog-v001.xml  maxxi_ontology.properties  maxxi_ontology.ttl
mema/v7/: mema_ontology.properties  mema_ontology.ttl
models/: mema_model.py
src/models/: mema_model.py
src/utils/: ontology-to-module.py
test/: DIDA BROCHURE_The Large Glass_ita.txt  query_mema_endpoint.py  test_instantiation.py
top/: isagog_ontology.properties  isagog_ontology.ttl  isagog_ontology_model.py
top/v2/: isagog-ontology.ttl  isagog_ontology_model.py
top/v3/: isagog-ontology.ttl
utils/: model_generator.py  ontology-to-module.py
v6/: mema_v6_class_actual.csv
v7/: catalog-v001.xml  mema_ontology.properties  mema_ontology.ttl
(+111 files in other folders)
