[tool.poetry]
name = "isagog-ontologies"
version = "0.1.0"
description = ""
authors = ["Guido Vetere <g.vetere@isagog.com>"]
readme = "README.md"
packages = [{ include = "isagog_ontologies" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.3"
isagog-kg = { git = "https://github.com/Isagog/isagog-kg.git" }
rdflib = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
