[project]
name = "isagog-ontologies"
version = "0.2.0"
description = ""
authors = [
    { name = "Guido Vetere", email = "g.vetere@isagog.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.3",
    "isagog-kg @ git+https://github.com/Isagog/isagog-kg.git",
    "rdflib>=7.1.3",
]
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.wheel]
packages = ["test", "top", "utils"]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
